Refactor event data handling in scrapers and update site templates
- Consolidated future and past event data into a single structure for improved clarity and efficiency.
- Updated scraping logic to return a unified event object containing date and link.
- Modified Jekyll templates to utilize the new event structure, displaying upcoming and past events based on date comparisons.
- Enhanced documentation to reflect changes in data access and event sorting logic.

--- a/site/index.html
+++ b/site/index.html
@@ -28,8 +28,11 @@ description: Discover active tech communities and meetups in Finland. Find upcom
 </div>
 <div class="row row-cards">
   <div class="space-y">
-    {% for community in site.data.output.future %} {% include card.html %} {%
-    endfor %}
+    {% assign today = 'now' | date: '%s' %} {% for community in
+    site.data.output.events %} {% assign event_date = community.date | split:
+    '/' %} {% assign event_timestamp = event_date[2] | append: '-' | append:
+    event_date[1] | append: '-' | append: event_date[0] | date: '%s' %} {% if
+    event_timestamp >= today %} {% include card.html %} {% endif %} {% endfor %}
   </div>
 </div>
 <div class="page-header d-print-none mt-1 mb-3">
@@ -41,7 +44,10 @@ description: Discover active tech communities and meetups in Finland. Find upcom
 </div>
 <div class="row row-cards">
   <div class="space-y">
-    {% for community in site.data.output.past %} {% include card.html %} {%
-    endfor %}
+    {% assign today = 'now' | date: '%s' %} {% for community in
+    site.data.output.events %} {% assign event_date = community.date | split:
+    '/' %} {% assign event_timestamp = event_date[2] | append: '-' | append:
+    event_date[1] | append: '-' | append: event_date[0] | date: '%s' %} {% if
+    event_timestamp < today %} {% include card.html %} {% endif %} {% endfor %}
   </div>
 </div>
