--- a/site/404.html
+++ b/site/404.html
@@ -5,28 +5,28 @@ title: Page not found
 description: The page you were looking for doesn't exist.
 ---
 
-<div class="container-fluid">
-  <div class="font-medium" id="alerts"></div>
-  <div class="empty">
-    <div class="empty-header">404</div>
-    <h1 class="empty-title">Not found</h1>
-    <p class="empty-subtitle text-secondary">
+<div class="font-medium" id="alerts"></div>
+<div class="flex flex-col items-center justify-center gap-6 p-6 md:p-12 text-center">
+  <header class="flex max-w-sm flex-col items-center gap-3">
+    <div class="text-6xl font-bold text-muted-foreground">404</div>
+    <h1 class="text-2xl font-bold">Not found</h1>
+    <p class="text-muted-foreground text-sm/relaxed">
       The page you were looking for doesn't exist.
     </p>
-    <div class="empty-action">
-      <a
-        class="btn d-inline-flex gap-2 align-items-center text-nowrap btn-primary btn-small justify-content-center"
-        href="/"
-      >
-        <img
-          src="{{ site.url }}/assets/icons/arrow-left.svg"
-          width="20"
-          height="20"
-          class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-left icon-component flex-shrink-0 icon-component-small"
-          alt="Back arrow"
-        />
-        Go home
-      </a>
-    </div>
-  </div>
+  </header>
+  <section class="flex gap-2">
+    <a
+      class="btn inline-flex gap-2 items-center whitespace-nowrap"
+      href="/"
+    >
+      <img
+        src="{{ site.url }}/assets/icons/arrow-left.svg"
+        width="20"
+        height="20"
+        class="w-5 h-5 shrink-0"
+        alt="Back arrow"
+      />
+      Go home
+    </a>
+  </section>
 </div>
