feat: enhance UI with design improvements, tooltips, and updated components

--- a/site/index.html
+++ b/site/index.html
@@ -7,12 +7,12 @@ description: Discover active tech communities and meetups in Finland. Find upcom
 <div class="border-b print:hidden mt-1 mb-3 pb-4">
   <div class="flex gap-2 items-center">
     <div class="flex-1">
-      <h2 class="text-2xl font-bold">Upcoming events</h2>
+      <h2 class="text-3xl font-bold leading-tight">Upcoming events</h2>
     </div>
     <div class="ml-auto print:hidden">
       <a
         href="https://github.com/olegp/techtribes?tab=readme-ov-file#add-community"
-        class="btn-outline"
+        class="btn-outline btn-enhanced"
       >
         <img
           src="{{ site.url }}/assets/icons/plus.svg"
@@ -38,7 +38,7 @@ description: Discover active tech communities and meetups in Finland. Find upcom
 <div class="border-b print:hidden mt-1 mb-3 pb-4">
   <div class="flex gap-2 items-center">
     <div class="flex-1">
-      <h2 class="text-2xl font-bold">Past events</h2>
+      <h2 class="text-3xl font-bold leading-tight">Past events</h2>
     </div>
   </div>
 </div>
