--- a/site/index.html
+++ b/site/index.html
@@ -7,21 +7,21 @@ description: Discover active tech communities and meetups in Finland. Find upcom
 <div class="border-b print:hidden mb-8 pb-6">
   <div class="flex gap-3 items-center">
     <div class="flex-1">
-      <h2 class="text-3xl font-bold leading-tight">Upcoming events</h2>
+      <h2 class="text-2xl font-bold leading-tight">Upcoming events</h2>
     </div>
     <div class="ml-auto print:hidden">
       <a
         href="https://github.com/olegp/techtribes?tab=readme-ov-file#add-community"
-        class="btn-outline btn-enhanced"
+        class="cursor-pointer inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-xl transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[#5b6cf6] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[#5b6cf6] text-white hover:brightness-95 h-9 px-4 py-2 font-medium text-sm"
       >
         <img
           src="{{ site.url }}/assets/icons/plus.svg"
           width="20"
           height="20"
-          class="w-5 h-5"
+          class="w-5 h-5 brightness-0 invert"
           alt="Plus sign"
         />
-        Add a community
+        <span class="text-nowrap">Add a community</span>
       </a>
     </div>
   </div>
@@ -41,7 +41,7 @@ description: Discover active tech communities and meetups in Finland. Find upcom
 <div class="border-b print:hidden mb-8 pb-6">
   <div class="flex gap-3 items-center">
     <div class="flex-1">
-      <h2 class="text-3xl font-bold leading-tight">Past events</h2>
+      <h2 class="text-2xl font-bold leading-tight">Past events</h2>
     </div>
   </div>
 </div>
