chore: remove unnecessary border class from index.html divs

--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@ title: Techtribes
 description: Discover active tech communities and meetups in Finland. Find upcoming events, past meetups, and connect with tech enthusiasts in your area.
 ---
 
-<div class="border-b print:hidden mb-8 pb-6">
+<div class="print:hidden mb-8 pb-6">
   <div class="flex gap-3 items-center">
     <div class="flex-1">
       <h2 class="text-2xl font-bold leading-tight">Upcoming events</h2>
@@ -38,7 +38,7 @@ description: Discover active tech communities and meetups in Finland. Find upcom
     {% endfor %}
   </div>
 </div>
-<div class="border-b print:hidden mb-8 pb-6">
+<div class="print:hidden mb-8 pb-6">
   <div class="flex gap-3 items-center">
     <div class="flex-1">
       <h2 class="text-2xl font-bold leading-tight">Past events</h2>
